infra-config/moon/resource-usage-tweaks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moon
  namespace: moon
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: moon
          resources:
            limits:
              cpu: "0.1"
              memory: "200Mi"
        - name: moon-api
          resources:
            limits:
              cpu: "0.1"
              memory: "200Mi"
        - name: selenoid-ui
          resources:
            limits:
              cpu: "0.1"
              memory: "150Mi"
