infra-config/moon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moon
  namespace: moon
spec:
  type: ClusterIP
